--- a/music_app/test/fixtures/albums.yml
+++ b/music_app/test/fixtures/albums.yml
@@ -1,9 +1,12 @@
 # == Schema Information
 #
-# Table name: bands
+# Table name: albums
 #
 #  id         :bigint(8)        not null, primary key
-#  name       :string           not null
+#  title      :string           not null
+#  year       :integer          not null
+#  band_id    :integer          not null
+#  live_album :boolean          not null
 #  created_at :datetime         not null
 #  updated_at :datetime         not null
 #
